# rust-wallet-toolbox

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
examples/: backup_wallet.rs  brc29_transfer.rs  chaintracks_sync.rs  chaintracks_validate.rs  internalize_payment.rs  list_actions.rs  list_balance.rs  nosend_batch.rs  p2pkh_transfer.rs  pushdrop_tokens.rs  setup_wallet.rs
migrations/mysql/: 001_initial.sql  002_varchar_to_enum.sql  003_enum_to_varchar.sql  004_remove_unsigned.sql  005_wallet_settings_json.sql
migrations/postgres/: 001_initial.sql  002_wallet_settings_json.sql
migrations/sqlite/: 001_initial.sql  002_wallet_settings_json.sql
src/: error.rs  lib.rs  logging.rs  migrations.rs  serde_datetime.rs  serde_helpers.rs  sqlx_string_enum.rs  status.rs  types.rs
src/auth_manager/: cwi_logic.rs  mod.rs  types.rs  ump_token.rs
src/chaintracks/: chaintracks.rs  mod.rs  traits.rs  types.rs
src/monitor/: helpers.rs  mod.rs  task_trait.rs
src/permissions/: brc114.rs  cache.rs  callbacks.rs  config.rs  ensure.rs  metadata.rs  mod.rs  originator.rs  p_module.rs  tests_parity.rs  token_crud.rs  types.rs
src/services/: mod.rs  service_collection.rs  services.rs  traits.rs  types.rs
src/signer/: broadcast_outcome.rs  build_signable.rs  complete_signed.rs  default_signer.rs  mod.rs  provider_signing.rs  signing_provider.rs  standard_provider.rs  traits.rs  types.rs  verify_unlock_scripts.rs
src/storage/: action_traits.rs  action_types.rs  beef.rs  find_args.rs  manager.rs  mod.rs
src/tables/: certificate.rs  certificate_field.rs  commission.rs  mod.rs  monitor_event.rs  output.rs  output_basket.rs  output_tag.rs  output_tag_map.rs  proven_tx.rs  proven_tx_req.rs  settings.rs  sync_state.rs  transaction.rs  tx_label.rs  tx_label_map.rs  user.rs
src/utility/: mod.rs  offset_key.rs  script_template_brc29.rs  tx_size.rs
src/wallet/: mod.rs  (+10 more)
tests/: arc_chaintracker_tests.rs  beef_tests.rs  brc100_vectors.rs  config_tests.rs  convenience.rs  create_action_tags.rs  error_tests.rs  logging_tests.rs  manager_tests.rs  migration_tests.rs  multi_provider_arc_tests.rs  provider_tests.rs  relinquish_output.rs  serialization_parity_tests.rs  service_collection_tests.rs  services_tests.rs  setup_builder.rs  signer_flow_tests.rs  signer_internalize_provider_tests.rs  storage_client_integration_tests.rs  storage_mysql_tests.rs  storage_postgres_tests.rs  storage_sqlite_tests.rs  sync_tests.rs  table_tests.rs  trait_tests.rs  wallet_lifecycle.rs
(+128 files in other folders)
