[package]
name = "bsv-wallet-toolbox"
version = "0.1.0"
edition = "2021"
description = "Production-ready BSV wallet implementation in Rust"

[lib]
name = "bsv_wallet_toolbox"

[dependencies]
bsv-sdk = { version = "0.1.6", features = ["network"] }
thiserror = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "macros", "chrono", "migrate"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
strum = { version = "0.26", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
reqwest-eventsource = "0.6"
futures = "0.3"
tokio-util = { version = "0.7", features = ["rt"] }
rand = "0.8"
base64 = "0.22"

[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite"]
mysql = ["sqlx/mysql"]
postgres = ["sqlx/postgres"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
