[package]
name = "bsv-wallet-toolbox"
version = "0.2.0"
edition = "2021"
rust-version = "1.87"
description = "Pure Rust BSV wallet-toolbox implementation"
readme = "README.md"
repository = "https://github.com/b1narydt/rust-wallet-toolbox"
documentation = "https://docs.rs/bsv-wallet-toolbox"
keywords = ["bsv", "bitcoin", "blockchain", "wallet", "cryptography"]
categories = ["cryptography", "authentication"]
license-file = "LICENSE"

[lib]
name = "bsv_wallet_toolbox"

[dependencies]
bsv-sdk = { path = "../bsv-rust-sdk", features = ["network"] }
thiserror = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "macros", "chrono", "migrate"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
strum = { version = "0.26", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
reqwest-eventsource = "0.6"
futures = "0.3"
tokio-util = { version = "0.7", features = ["rt"] }
rand = "0.8"
base64 = "0.22"

[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite"]
mysql = ["sqlx/mysql"]
postgres = ["sqlx/postgres"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
